<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="toppings">Toppings</string>
    <string name="quantity">Quantity</string>
    <string name="thank_you">\nThank you!</string>
    <string name="whipped">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="add">add</string>
    <string name="name">Name : </string>
    <string name="order">order</string>
    <string name="True">true</string>
    <string name="False">false</string>
    <string name="total">Total</string>
    <string name="just_java">Just Java app order for </string>


</resources>